# wgpu-testing

./: Cargo.toml  README.md  build.rs  time.rs  wow.txt
res/: raphtalia.mtl
res/mikasa/: mikasa.fbx
res/raphtalia/: raphtalia.mtl
res/tifa/: tifa.mtl
res/tifa/textures/: BHarness_disp01.tiff  BHarness_dispA01.tiff  BHarness_normA01.tiff  PC0002_00_Eye_O.tga
src/: camera.rs  engine.rs  instancing.rs  light.wgsl  main.rs  model.rs  resources.rs  rotation.rs  shader.wgsl  state.rs  texture.rs  transformation.rs
