[package]
name = "wgpu-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.27", features = ["wayland", "x11"]}
env_logger = "0.10"
log = "0.4.19"
wgpu = "0.17"
pollster = "0.3"
bytemuck = {version = "1.13.1", features = ["derive"]}
anyhow = "1.0.72"
cgmath = "0.18"
tobj = { version = "4.0.0", features = ["async"]}
cfg-if = "1.0.0"
instant = "0.1"
imgui = "0.11"
imgui-wgpu = "0.23"
imgui-winit-support = "0.11.0"
fbxcel-dom = "0.0.10"

[dependencies.image]
version = "0.24.6"
default-features = false
features = ["png", "jpeg", "tga"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
